# protein-feature-vectors

./: README.md  pyproject.toml
protein_feature_vectors/: Protein_parameters_setting.json  calculator.py
protein_feature_vectors/test/: test.py  test_k1tpc.py
