[tool.poetry]
name = "protein_feature_vectors"
version = "1.0"
description = "Code to produce fixed-length feature vectors from protein sequences based on iFeatureOmega"
authors = ["Brian Osborne <briano@bioteam.net>"]
readme = "README.md"
packages = [{ include = "protein_feature_vectors" }]
include = [
    "protein_feature_vectors/calculator.py",
    "protein_feature_vectors/Protein_parameters_setting.json",
    "protein_feature_vectors/data_examples/*",
    "protein_feature_vectors/data/*",
    "protein_feature_vectors/test/test.py",
]

[tool.poetry.dependencies]
numpy = "<2.0,>=1.25.2"
fastapy = "*"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
